# Roomly-FastAPI

./: README.md  pyproject.toml  test_data.sql
app/: config.py  database.py  exceptions.py  main.py
app/booking/: dao.py  models.py  router.py  schemas.py
app/dao/: base.py
app/hotels/: dao.py  models.py  router.py  schemas.py
app/images/: router.py
app/migrations/: env.py
app/migrations/versions/: edd1d74d1fce_initial_migration.py  f857100d4dfa_rooms_bookings_users.py
app/pages/: router.py
app/tasks/: celery.py  tasks.py
app/templates/: hotels.html
app/users/: auth.py  delete.ipynb  dependencies.py  models.py  router.py
app/utils/: client.py  redis_cache.py
